--- a/RR_PA1.Rmd
+++ b/RR_PA1.Rmd
@@ -1,37 +1,35 @@
 Reproducible Research 
 =====================
 ### Peer Assessment 1
-### Alexis Segovia
-### 16/08/2015
+### *Alexis Segovia*
+### 17/12/2015
 
 Used libraries:
 
-```{r}
+```{r, echo = TRUE}
 library(ggplot2)
 library(scales)
 library(Hmisc)
 library(sqldf)
 library(plyr)
-library(lattice)
 ```
-## Loading and preprocessing the data
+### Loading and preprocessing the data
 
 1. Load the data (i.e. read.csv())
 
-```{r}
-
+```{r,echo=TRUE}
 activityData <- read.csv('activity.csv')
 ```
 
 2. Process/transform the data (if necessary) into a format suitable for your analysis
 
-```{r}
+```{r,echo=TRUE}
 activityData$date <- as.Date(activityData$date)
 ```
 
-## What is mean total number of steps taken per day?
+### What is mean total number of steps taken per day?
 
-```{r}
+```{r,echo=TRUE}
 stepsTakenPerDay <- tapply(activityData$steps, activityData$date, sum, na.rm=TRUE)
 ```
 
@@ -43,49 +41,50 @@ qplot(stepsTakenPerDay,geom="histogram",binwidth = 400,main ='Total steps taken 
 
 2. Calculate and report the mean and median total number of steps taken per day
 
-```{r}
+```{r,echo=TRUE}
 stepsTakenPerDayMean <- mean(stepsTakenPerDay)
 stepsTakenPerDayMedian <- median(stepsTakenPerDay)
 ```
+
 - Mean  : `r stepsTakenPerDayMean`
 - Median: `r stepsTakenPerDayMedian`
 
-## What is the average daily activity pattern?
+### What is the average daily activity pattern?
 
-```{r}
+```{r,echo=TRUE}
 averDailyActivity <- aggregate(x=list(meanSteps=activityData$steps), by=list(interval=activityData$interval), FUN=mean, na.rm=TRUE)
 ```
 
 1. Make a time series plot
 
-```{r}
+```{r,echo=TRUE}
 ggplot(data=averDailyActivity, aes(x=interval, y=meanSteps)) +
-    geom_line() + xlab("5-minute interval") + ylab("average number of steps taken") 
+        geom_line() + xlab("5-minute interval") + ylab("average number of steps taken") 
 ```
 
 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
-```{r}
+```{r,echo=TRUE}
 StepsByInterval <- aggregate(steps ~ interval, activityData, mean)
 plot(StepsByInterval$interval,StepsByInterval$steps, type="l", xlab="Interval", ylab="Number of Steps",main="Average Number of Steps per Day by Interval")
 maxNUmberSteps <- StepsByInterval[which.max(StepsByInterval$steps),1]
 ```
 Max Number of Steps : `r maxNUmberSteps`
 
-## Imputing missing values
+### Imputing missing values
 
 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
 
-```{r}
+```{r,echo=TRUE}
 totalNA <- sqldf('SELECT ad.* FROM "activityData" as ad
     WHERE ad.steps IS NULL ORDER BY ad.date, ad.interval ') 
 ```
-    
+
 Total Number of missing values: `r NROW(totalNA)` 
 
 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
-```{r}
+```{r,echo=TRUE}
 activityDataNA <- na.omit(activityData)
 intervals <- ddply(activityDataNA,~interval, summarise, mean=mean(steps))
 results <- sqldf('SELECT ad.*, ada.mean  FROM "intervals" as ada
@@ -97,7 +96,7 @@ results <- sqldf('SELECT ad.*, ada.mean  FROM "intervals" as ada
 
 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
 
-```{r}
+```{r,echo=TRUE}
 results$steps[is.na(results$steps)] <- results$mean[is.na(results$steps)]
 ```
 
@@ -105,7 +104,7 @@ results$steps[is.na(results$steps)] <- results$mean[is.na(results$steps)]
 
 Prepare data to plot
 
-```{r}
+```{r,echo=TRUE}
 ResultsTotalSteps <- as.integer( sqldf(' 
     SELECT sum(steps)  
     FROM results') )
@@ -123,20 +122,20 @@ Resultsdailysteps <- sqldf('
 
 Histogram of the total number of steps taken each day.
 
-```{r}
+```{r,echo=TRUE}
 hist(Resultsdailysteps$steps, 
      main="After Imputate NA",
      breaks=10,
      xlab="Total Number of Steps Taken Daily")
 ```
 
-## Are there differences in activity patterns between weekdays and weekends?
+### Are there differences in activity patterns between weekdays and weekends?
 
 Adding a column called (Week).
 
-```{r}
+```{r,echo=TRUE}
 results$week <- as.factor(ifelse(weekdays(results$date) %in% 
-                c("sabado","domingo"),"weekend", "weekday"))
+                                         c("sabado","domingo"),"weekend", "weekday"))
 
 
 ResultsWeek <- sqldf('   
@@ -147,13 +146,13 @@ ResultsWeek <- sqldf('
 ```
 
 
-```{r}
+```{r,echo=TRUE}
 p <- xyplot(AverageSteps ~ interval | factor(week), data=ResultsWeek, 
-       type = 'l',
-       main="Differences in activity patterns between weekdays and weekends",
-       xlab="5-Minute Interval",
-       ylab="Average of Steps Taken")
+            type = 'l',
+            main="Differences in activity patterns between weekdays and weekends",
+            xlab="5-Minute Interval",
+            ylab="Average of Steps Taken")
 print (p) 
 ```
 
-Yes. There are more activities at weekend
+*Yes. There are more activities at weekend*
